--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,96 +21,96 @@ jobs:
       id-token: write
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3.5.3
+      - name: Checkout repository
+        uses: actions/checkout@v3.5.3
 
-    - name: Install cosign
-      if: github.event_name != 'pull_request'
-      uses: sigstore/cosign-installer@v3.1.1
+      - name: Install cosign
+        if: github.event_name != 'pull_request'
+        uses: sigstore/cosign-installer@v3.1.1
 
-    - name: Setup Docker buildx
-      uses: docker/setup-buildx-action@v2.9.1
+      - name: Setup Docker buildx
+        uses: docker/setup-buildx-action@v2.9.1
 
-    - name: Log into ${{ env.REGISTRY }}
-      if: github.event_name != 'pull_request'
-      uses: docker/login-action@v2.2.0
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Log into ${{ env.REGISTRY }}
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v2.2.0
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Log into Docker Hub
-      uses: docker/login-action@v2.2.0
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Log into Docker Hub
+        uses: docker/login-action@v2.2.0
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Extract Docker metadata
-      id: meta
-      uses: docker/metadata-action@v4.6.0
-      with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v4.6.0
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-    - name: Build the Docker image
-      id: build
-      uses: docker/build-push-action@v4.1.1
-      with:
-        provenance: false
-        context: .
-        platforms: linux/amd64
-        load: ${{ github.event_name != 'pull_request' }}
-        tags: |
-          ${{ steps.meta.outputs.tags }}
-          ammnt/nginx:http3
-        labels: ${{ steps.meta.outputs.labels }}
-        # cache-from: type=gha
-        # cache-to: type=gha,mode=max
+      - name: Build the Docker image
+        id: build
+        uses: docker/build-push-action@v4.1.1
+        with:
+          provenance: false
+          context: .
+          platforms: linux/amd64
+          load: ${{ github.event_name != 'pull_request' }}
+          tags: |
+            ${{ steps.meta.outputs.tags }}
+            ammnt/nginx:http3
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-    - name: Test the Docker image
-      run: |
-        docker run --name nginx --restart unless-stopped -p 127.0.0.1:8080:8080/tcp -d ammnt/nginx:http3
-        curl -vki http://127.0.0.1:8080
+      - name: Test the Docker image
+        run: |
+          docker run --name nginx --restart unless-stopped -p 127.0.0.1:8080:8080/tcp -d ammnt/nginx:http3
+          curl -vki http://127.0.0.1:8080
 
-    - name: Push the Docker image
-      id: push
-      uses: docker/build-push-action@v4.1.1
-      with:
-        provenance: false
-        context: .
-        platforms: linux/amd64
-        push: ${{ github.event_name != 'pull_request' }}
-        tags: |
-          ${{ steps.meta.outputs.tags }}
-          ammnt/nginx:http3
-        labels: ${{ steps.meta.outputs.labels }}
-        # cache-from: type=gha
-        # cache-to: type=gha,mode=max
+      - name: Push the Docker image
+        id: push
+        uses: docker/build-push-action@v4.1.1
+        with:
+          provenance: false
+          context: .
+          platforms: linux/amd64
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: |
+            ${{ steps.meta.outputs.tags }}
+            ammnt/nginx:http3
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-    - name: Sign the published Docker image
-      if: ${{ github.event_name != 'pull_request' }}
-      env:
-        COSIGN_EXPERIMENTAL: "true"
-      run: |
-        cosign sign -y \
-          -a "repo=${{ github.repository }}" \
-          -a "workflow=${{ github.workflow }}" \
-          -a "ref=${{ github.sha }}" \
-          ghcr.io/ammnt/nginx:@${{ steps.push.outputs.digest }}
-        cosign sign -y \
-          -a "repo=${{ github.repository }}" \
-          -a "workflow=${{ github.workflow }}" \
-          -a "ref=${{ github.sha }}" \
-          ammnt/nginx:@${{ steps.push.outputs.digest }}
+      - name: Sign the published Docker image
+        if: ${{ github.event_name != 'pull_request' }}
+        env:
+          COSIGN_EXPERIMENTAL: "true"
+        run: |
+          cosign sign -y \
+            -a "repo=${{ github.repository }}" \
+            -a "workflow=${{ github.workflow }}" \
+            -a "ref=${{ github.sha }}" \
+            ghcr.io/ammnt/nginx:@${{ steps.push.outputs.digest }}
+          cosign sign -y \
+            -a "repo=${{ github.repository }}" \
+            -a "workflow=${{ github.workflow }}" \
+            -a "ref=${{ github.sha }}" \
+            ammnt/nginx:@${{ steps.push.outputs.digest }}
 
-    - name: Run deploy update on the server
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USERNAME }}
-        key: ${{ secrets.SERVER_KEY }}
-        port: ${{ secrets.SERVER_PORT }}
-        script: |
-          cd /home/${{ secrets.SERVER_USERNAME }}/agh
-          docker-compose pull nginx dns
-          docker-compose up -d nginx dns
-          docker system prune -f
+      - name: Run deploy update on the server
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SERVER_KEY }}
+          port: ${{ secrets.SERVER_PORT }}
+          script: |
+            cd /home/${{ secrets.SERVER_USERNAME }}/agh
+            docker-compose pull nginx dns
+            docker-compose up -d nginx dns
+            docker system prune -f
