--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Install cosign
         if: github.event_name != 'pull_request'
-        uses: sigstore/cosign-installer@v3.2.0
+        uses: sigstore/cosign-installer@v3.4.0
 
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@v3.0.0
@@ -49,7 +49,7 @@ jobs:
 
       - name: Extract Docker metadata
         id: meta
-        uses: docker/metadata-action@v5.0.0
+        uses: docker/metadata-action@v5.5.1
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
@@ -70,7 +70,7 @@ jobs:
 
       - name: Test the Docker image
         run: |
-          docker run --name nginx --restart unless-stopped -p 127.0.0.1:8080:8080/tcp -d ammnt/nginx:http3
+          docker run -idt -p 127.0.0.1:8080:8080/tcp ammnt/nginx:http3
           curl -vvv http://127.0.0.1:8080 || exit 1
 
       - name: Push the Docker image
