--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,8 +104,8 @@ jobs:
 
       - name: Get Digest of Docker images
         run: |
-          DIGESTHUB=$(docker inspect --format='{{index .RepoDigests 0}}' ammnt/nginx:http3)
-          DIGESTGHCR=$(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ammnt/nginx:http3)
+          DIGESTHUB=$(docker inspect ammnt/nginx:http3 | jq -r '.[].RepoDigests[0] | split(":") | .[1]'
+          DIGESTGHCR=$(docker inspect ghcr.io/ammnt/nginx:http3 | jq -r '.[].RepoDigests[0] | split(":") | .[1]'
           echo $DIGESTHUB
           echo $DIGESTGHCR
 
@@ -118,9 +118,9 @@ jobs:
             -a "repo=${{ github.repository }}" \
             -a "workflow=${{ github.workflow }}" \
             -a "ref=${{ github.sha }}" \
-            $DIGESTHUB
+            ammnt/nginx@sha256:${DIGESTHUB}
           cosign sign -y \
             -a "repo=${{ github.repository }}" \
             -a "workflow=${{ github.workflow }}" \
             -a "ref=${{ github.sha }}" \
-            $DIGESTGHCR
+            ghcr.io/ammnt/nginx@sha256:${DIGESTGHCR}
