--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,7 +67,7 @@ jobs:
       - name: Slim the Docker image
         uses: kitabisa/docker-slim-action@v1.0.3
         env:
-          DSLIM_HTTP_PROBE: true
+          DSLIM_HTTP_PROBE: false
         with:
           target: ammnt/nginx:http3
           tag: ammnt/nginx:http3
@@ -76,7 +76,7 @@ jobs:
       - name: Slim the Docker image for GHCR
         uses: kitabisa/docker-slim-action@v1.0.3
         env:
-          DSLIM_HTTP_PROBE: true
+          DSLIM_HTTP_PROBE: false
         with:
           target: ghcr.io/ammnt/nginx:http3
           tag: ghcr.io/ammnt/nginx:http3
