--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,9 +27,7 @@ jobs:
         uses: actions/checkout@v5.0.0
 
       - name: Load .env variables☁️
-        run: |
-          export $(cat ./.env | xargs)
-          echo "BUILD_DATE=$(date +'%Y-%m-%dT%H:%M:%S')" >> $GITHUB_ENV
+        run: export $(cat ./.env | xargs)
 
       - name: Install cosign🔒
         uses: sigstore/cosign-installer@v3.10.0
@@ -67,6 +65,10 @@ jobs:
             org.opencontainers.image.authors="ammnt, admin@msftcnsi.com"
             org.opencontainers.image.title="Distroless NGINX built with QUIC and HTTP/3 support🚀"
             org.opencontainers.image.source="https://github.com/ammnt/nginx/"
+            org.opencontainers.image.documentation="https://github.com/ammnt/nginx/blob/main/README.md"
+            org.opencontainers.image.licenses="BSD-2-Clause License"
+            org.opencontainers.image.url="https://msftcnsi.com"
+            org.opencontainers.image.version=${{ env.APP_VERSION }}
 
       - name: Build the Docker image⛓️
         id: build
